# fig2r

./: .gitignore  Cargo.toml  README.md  SKILL.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: postinstall.js
skills/fig2r/: SKILL.md
skills/fig2r/references/: advanced-workflows.md  ir-schema.md  project-adaptation.md
src/: cli.rs  error.rs  main.rs  warning.rs
src/codegen/: asset.rs  component.rs  fonts.rs  index.rs  mod.rs  theme.rs  tree.rs  variant.rs
src/emit/: formatter.rs  mod.rs  writer.rs
src/figma/: api.rs  config.rs  mod.rs  transform.rs  types.rs  url.rs
src/ir/: mod.rs  schema.rs  validate.rs
src/tailwind/: layout.rs  mod.rs  style.rs  text.rs  values.rs
tests/: integration.rs
tests/fixtures/: image.ir.json  minimal.ir.json
