[package]
name = "fig2r"
version = "0.1.3"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.32"
mimalloc = "0.1.48"
rayon = "1.12.0"
reqwest = { version = "0.13.2", features = ["brotli", "gzip", "json"] }
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["full"] }
toml = "1.1.2"


[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
strip = false
